# zed-mise

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml  mise.toml
.github/workflows/: release.yml
configuration/: default_settings.jsonc  installation_instructions.md  settings_schema.json
languages/mise/: config.toml
languages/tool-versions/: config.toml  highlights.scm
mise-lsp/: Cargo.toml
mise-lsp/src/: main.rs
mise-mcp/: Cargo.toml
mise-mcp/src/: main.rs
src/: lib.rs
tree-sitter-tool-versions/: grammar.js
tree-sitter-tool-versions/src/: grammar.json  node-types.json  parser.c
