# This is the Zed extension crate. Zed compiles it to `wasm32-wasip1`.
# It MUST live at the repo root (next to extension.toml). The `mise-mcp/`
# sibling crate is a separate, host-native binary and is decoupled from this
# crate via its own `[workspace]` table, so Zed's wasm build never touches it.
[package]
name = "zed_mise"
version = "0.1.1"
edition = "2021"
publish = false
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
