# Standalone host-native LSP server. Like mise-mcp, the empty `[workspace]`
# table decouples it from the extension crate at the repo root.
[workspace]

[package]
name = "mise-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Language server adding mise version-bump inlay hints and upgrade code actions to mise.toml / .tool-versions."

[[bin]]
name = "mise-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
serde_json = "1"
toml_edit = "0.22"
# Matches the channel type exposed by lsp-server's Connection::sender.
crossbeam-channel = "0.5"

[profile.release]
strip = true
opt-level = "z"
lto = true
